// Vitest Snapshot v1

exports[`TokenComponent --- Snapshot > Capturing Snapshot of TokenComponent 1`] = `
<body
  id="app"
>
  <div>
    <div>
      <header
        class="bx--bmrg-feature-header"
      >
        <section
          class="bx--bmrg-feature-header__content"
        >
          <div
            class="bx--bmrg-feature-header__header"
          >
            <h1
              class="bx--bmrg-feature-header-title"
            >
              Global Tokens
            </h1>
          </div>
        </section>
      </header>
      <div>
        <div>
          <button
            class="bx--btn bx--btn--md bx--btn--primary"
            data-testid="create-token-button"
            style="width: 12rem;"
            tabindex="0"
            type="button"
          >
            Create Token
            <svg
              aria-hidden="true"
              aria-label="Create Token"
              class="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
              />
            </svg>
          </button>
        </div>
        <div
          class="bx--data-table-container"
        >
          <div
            class="bx--data-table-content"
          >
            <table
              class="bx--data-table bx--data-table--sort bx--data-table--no-border"
            >
              <thead>
                <tr>
                  <th
                    aria-sort="none"
                    class="undefined undefined"
                    id="creatorName"
                    scope="col"
                  >
                    <div
                      id="table-sort-2"
                      style="display: none;"
                    >
                      Click to sort rows by Created By header in ascending order
                    </div>
                    <button
                      aria-describedby="table-sort-2"
                      class="undefined undefined bx--table-sort"
                      type="button"
                    >
                      <span
                        class="bx--table-sort__flex"
                      >
                        <div
                          class="bx--table-header-label"
                        >
                          Created By
                        </div>
                        <svg
                          aria-hidden="true"
                          class="bx--table-sort__icon"
                          fill="currentColor"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                          />
                        </svg>
                        <svg
                          aria-hidden="true"
                          class="bx--table-sort__icon-unsorted"
                          fill="currentColor"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                          />
                        </svg>
                      </span>
                    </button>
                  </th>
                  <th
                    aria-sort="none"
                    class="undefined undefined"
                    id="description"
                    scope="col"
                  >
                    <div
                      id="table-sort-3"
                      style="display: none;"
                    >
                      Click to sort rows by Description header in ascending order
                    </div>
                    <button
                      aria-describedby="table-sort-3"
                      class="undefined undefined bx--table-sort"
                      type="button"
                    >
                      <span
                        class="bx--table-sort__flex"
                      >
                        <div
                          class="bx--table-header-label"
                        >
                          Description
                        </div>
                        <svg
                          aria-hidden="true"
                          class="bx--table-sort__icon"
                          fill="currentColor"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                          />
                        </svg>
                        <svg
                          aria-hidden="true"
                          class="bx--table-sort__icon-unsorted"
                          fill="currentColor"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                          />
                        </svg>
                      </span>
                    </button>
                  </th>
                  <th
                    aria-sort="descending"
                    class="undefined undefined"
                    id="creationDate"
                    scope="col"
                  >
                    <div
                      id="table-sort-4"
                      style="display: none;"
                    >
                      Click to unsort rows by Date Created header
                    </div>
                    <button
                      aria-describedby="table-sort-4"
                      class="undefined undefined bx--table-sort bx--table-sort--active bx--table-sort--ascending"
                      type="button"
                    >
                      <span
                        class="bx--table-sort__flex"
                      >
                        <div
                          class="bx--table-header-label"
                        >
                          Date Created
                        </div>
                        <svg
                          aria-hidden="true"
                          class="bx--table-sort__icon"
                          fill="currentColor"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                          />
                        </svg>
                        <svg
                          aria-hidden="true"
                          class="bx--table-sort__icon-unsorted"
                          fill="currentColor"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                          />
                        </svg>
                      </span>
                    </button>
                  </th>
                  <th
                    aria-sort="none"
                    class="undefined undefined"
                    id="expiryDate"
                    scope="col"
                  >
                    <div
                      id="table-sort-5"
                      style="display: none;"
                    >
                      Click to sort rows by Expires (UTC) header in ascending order
                    </div>
                    <button
                      aria-describedby="table-sort-5"
                      class="undefined undefined bx--table-sort"
                      type="button"
                    >
                      <span
                        class="bx--table-sort__flex"
                      >
                        <div
                          class="bx--table-header-label"
                        >
                          Expires (UTC)
                        </div>
                        <svg
                          aria-hidden="true"
                          class="bx--table-sort__icon"
                          fill="currentColor"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                          />
                        </svg>
                        <svg
                          aria-hidden="true"
                          class="bx--table-sort__icon-unsorted"
                          fill="currentColor"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                          />
                        </svg>
                      </span>
                    </button>
                  </th>
                  <th
                    class="undefined undefined"
                    id="delete"
                    scope="col"
                  />
                </tr>
              </thead>
              <tbody
                aria-live="polite"
              >
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div>
                      <p>
                        Test User
                      </p>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div>
                      <p>
                        test token 2
                      </p>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div>
                      <p>
                        July 07, 2021
                      </p>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div>
                      <p>
                        ---
                      </p>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div>
                      <button
                        aria-describedby="danger-description-7"
                        class="bx--btn bx--btn--sm bx--btn--danger--ghost"
                        data-testid="delete-token-button-12"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="bx--visually-hidden"
                          id="danger-description-7"
                        >
                          danger
                        </span>
                        <svg
                          aria-hidden="true"
                          aria-label="deleteToken"
                          class="bx--btn__icon"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 32 32"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 12H14V24H12zM18 12H20V24H18z"
                          />
                          <path
                            d="M4 6V8H6V28a2 2 0 002 2H24a2 2 0 002-2V8h2V6zM8 28V8H24V28zM12 2H20V4H12z"
                          />
                        </svg>
                      </button>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div>
                      <p>
                        Test User
                      </p>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div>
                      <p>
                        test token
                      </p>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div>
                      <p>
                        June 07, 2021
                      </p>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div>
                      <p>
                        June 07, 2022
                      </p>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div>
                      <button
                        aria-describedby="danger-description-8"
                        class="bx--btn bx--btn--sm bx--btn--danger--ghost"
                        data-testid="delete-token-button-11"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="bx--visually-hidden"
                          id="danger-description-8"
                        >
                          danger
                        </span>
                        <svg
                          aria-hidden="true"
                          aria-label="deleteToken"
                          class="bx--btn__icon"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 32 32"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 12H14V24H12zM18 12H20V24H18z"
                          />
                          <path
                            d="M4 6V8H6V28a2 2 0 002 2H24a2 2 0 002-2V8h2V6zM8 28V8H24V28zM12 2H20V4H12z"
                          />
                        </svg>
                      </button>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="bx--pagination"
        >
          <div
            class="bx--pagination__left"
          >
            <label
              class="bx--pagination__text"
              for="bx-pagination-select-1"
              id="bx-pagination-select-1-count-label"
            >
              Items per page:
            </label>
            <div
              class="bx--form-item"
            >
              <div
                class="bx--select bx--select--inline bx--select__item-count"
              >
                <div
                  class="bx--select-input--inline__wrapper"
                >
                  <div
                    class="bx--select-input__wrapper"
                  >
                    <select
                      class="bx--select-input"
                      id="bx-pagination-select-1"
                    >
                      <option
                        class="bx--select-option"
                        value="10"
                      >
                        10
                      </option>
                      <option
                        class="bx--select-option"
                        value="20"
                      >
                        20
                      </option>
                      <option
                        class="bx--select-option"
                        value="50"
                      >
                        50
                      </option>
                      <option
                        class="bx--select-option"
                        value="100"
                      >
                        100
                      </option>
                    </select>
                    <svg
                      aria-hidden="true"
                      class="bx--select__arrow"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <span
              class="bx--pagination__text bx--pagination__items-count"
            >
              1–2 of 2 items
            </span>
          </div>
          <div
            class="bx--pagination__right"
          >
            <div
              class="bx--form-item"
            >
              <div
                class="bx--select bx--select--inline bx--select__page-number"
              >
                <label
                  class="bx--label bx--visually-hidden"
                  for="bx-pagination-select-1-right"
                >
                  Page number, of 1 pages
                </label>
                <div
                  class="bx--select-input--inline__wrapper"
                >
                  <div
                    class="bx--select-input__wrapper"
                  >
                    <select
                      class="bx--select-input"
                      id="bx-pagination-select-1-right"
                    >
                      <option
                        class="bx--select-option"
                        value="1"
                      >
                        1
                      </option>
                    </select>
                    <svg
                      aria-hidden="true"
                      class="bx--select__arrow"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <span
              class="bx--pagination__text"
            >
              of 1 page
            </span>
            <div
              class="bx--pagination__control-buttons"
            >
              <button
                class="bx--pagination__button bx--pagination__button--backward bx--pagination__button--no-index bx--btn bx--btn--ghost bx--btn--disabled bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
                disabled=""
                tabindex="0"
                type="button"
              >
                <div
                  class="bx--assistive-text"
                >
                  Previous page
                </div>
                <svg
                  aria-hidden="true"
                  aria-label="Previous page"
                  class="bx--btn__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 24L10 16 20 8z"
                  />
                </svg>
              </button>
              <button
                class="bx--pagination__button bx--pagination__button--forward bx--pagination__button--no-index bx--btn bx--btn--ghost bx--btn--disabled bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-end"
                disabled=""
                tabindex="0"
                type="button"
              >
                <div
                  class="bx--assistive-text"
                >
                  Next page
                </div>
                <svg
                  aria-hidden="true"
                  aria-label="Next page"
                  class="bx--btn__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8L22 16 12 24z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="bx--bmrg-modal-portal"
  />
  <div
    class="bx--bmrg-modal-portal"
  />
  <div
    class="bx--bmrg-modal-portal"
  />
</body>
`;

exports[`TokenComponent --- Snapshot Capturing Snapshot of TokenComponent 1`] = `
<body
  id="app"
>
  <div>
    <div
      class="container"
    >
      <header
        class="bx--bmrg-feature-header header"
      >
        <section
          class="bx--bmrg-feature-header__content"
        >
          <div
            class="bx--bmrg-feature-header__header"
          >
            <h1
              class="bx--bmrg-feature-header-title headerTitle"
            >
              Global Tokens
            </h1>
          </div>
        </section>
      </header>
      <div
        class="content"
      >
        <div
          class="tokenContainer"
        >
          <button
            class="bx--btn bx--btn--md bx--btn--primary"
            data-testid="create-token-button"
            style="width: 12rem;"
            tabindex="0"
            type="button"
          >
            Create Token
            <svg
              aria-hidden="true"
              aria-label="Create Token"
              class="bx--btn__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              role="img"
              viewBox="0 0 32 32"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M17 15L17 8 15 8 15 15 8 15 8 17 15 17 15 24 17 24 17 17 24 17 24 15z"
              />
            </svg>
          </button>
        </div>
        <div
          class="bx--data-table-container"
        >
          <div
            class="bx--data-table-content"
          >
            <table
              class="bx--data-table bx--data-table--sort bx--data-table--no-border"
            >
              <thead>
                <tr
                  class="tableHeadRow"
                >
                  <th
                    aria-sort="none"
                    class="tableHeadHeader creatorName"
                    id="creatorName"
                    scope="col"
                  >
                    <div
                      id="table-sort-2"
                      style="display: none;"
                    >
                      Click to sort rows by Created By header in ascending order
                    </div>
                    <button
                      aria-describedby="table-sort-2"
                      class="tableHeadHeader creatorName bx--table-sort"
                      type="button"
                    >
                      <span
                        class="bx--table-sort__flex"
                      >
                        <div
                          class="bx--table-header-label"
                        >
                          Created By
                        </div>
                        <svg
                          aria-hidden="true"
                          class="bx--table-sort__icon"
                          fill="currentColor"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                          />
                        </svg>
                        <svg
                          aria-hidden="true"
                          class="bx--table-sort__icon-unsorted"
                          fill="currentColor"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                          />
                        </svg>
                      </span>
                    </button>
                  </th>
                  <th
                    aria-sort="none"
                    class="tableHeadHeader description"
                    id="description"
                    scope="col"
                  >
                    <div
                      id="table-sort-3"
                      style="display: none;"
                    >
                      Click to sort rows by Description header in ascending order
                    </div>
                    <button
                      aria-describedby="table-sort-3"
                      class="tableHeadHeader description bx--table-sort"
                      type="button"
                    >
                      <span
                        class="bx--table-sort__flex"
                      >
                        <div
                          class="bx--table-header-label"
                        >
                          Description
                        </div>
                        <svg
                          aria-hidden="true"
                          class="bx--table-sort__icon"
                          fill="currentColor"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                          />
                        </svg>
                        <svg
                          aria-hidden="true"
                          class="bx--table-sort__icon-unsorted"
                          fill="currentColor"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                          />
                        </svg>
                      </span>
                    </button>
                  </th>
                  <th
                    aria-sort="descending"
                    class="tableHeadHeader creationDate"
                    id="creationDate"
                    scope="col"
                  >
                    <div
                      id="table-sort-4"
                      style="display: none;"
                    >
                      Click to unsort rows by Date Created header
                    </div>
                    <button
                      aria-describedby="table-sort-4"
                      class="tableHeadHeader creationDate bx--table-sort bx--table-sort--active bx--table-sort--ascending"
                      type="button"
                    >
                      <span
                        class="bx--table-sort__flex"
                      >
                        <div
                          class="bx--table-header-label"
                        >
                          Date Created
                        </div>
                        <svg
                          aria-hidden="true"
                          class="bx--table-sort__icon"
                          fill="currentColor"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                          />
                        </svg>
                        <svg
                          aria-hidden="true"
                          class="bx--table-sort__icon-unsorted"
                          fill="currentColor"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                          />
                        </svg>
                      </span>
                    </button>
                  </th>
                  <th
                    aria-sort="none"
                    class="tableHeadHeader expiryDate"
                    id="expiryDate"
                    scope="col"
                  >
                    <div
                      id="table-sort-5"
                      style="display: none;"
                    >
                      Click to sort rows by Expires (UTC) header in ascending order
                    </div>
                    <button
                      aria-describedby="table-sort-5"
                      class="tableHeadHeader expiryDate bx--table-sort"
                      type="button"
                    >
                      <span
                        class="bx--table-sort__flex"
                      >
                        <div
                          class="bx--table-header-label"
                        >
                          Expires (UTC)
                        </div>
                        <svg
                          aria-hidden="true"
                          class="bx--table-sort__icon"
                          fill="currentColor"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M16 4L6 14 7.41 15.41 15 7.83 15 28 17 28 17 7.83 24.59 15.41 26 14 16 4z"
                          />
                        </svg>
                        <svg
                          aria-hidden="true"
                          class="bx--table-sort__icon-unsorted"
                          fill="currentColor"
                          focusable="false"
                          height="20"
                          preserveAspectRatio="xMidYMid meet"
                          viewBox="0 0 32 32"
                          width="20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M27.6 20.6L24 24.2 24 4 22 4 22 24.2 18.4 20.6 17 22 23 28 29 22zM9 4L3 10 4.4 11.4 8 7.8 8 28 10 28 10 7.8 13.6 11.4 15 10z"
                          />
                        </svg>
                      </span>
                    </button>
                  </th>
                  <th
                    class="tableHeadHeader delete"
                    id="delete"
                    scope="col"
                  />
                </tr>
              </thead>
              <tbody
                aria-live="polite"
                class="tableBody"
              >
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="tableCell"
                    >
                      <p
                        class="tableTextarea"
                      >
                        Test User
                      </p>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="tableCell"
                    >
                      <p
                        class="tableTextarea"
                      >
                        test token 2
                      </p>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="tableCell"
                    >
                      <p
                        class="tableTextarea"
                      >
                        January 01, 2020
                      </p>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="tableCell"
                    >
                      <p
                        class="tableTextarea"
                      >
                        ---
                      </p>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="tableCell"
                    >
                      <button
                        aria-describedby="danger-description-7"
                        class="button bx--btn bx--btn--sm bx--btn--danger--ghost"
                        data-testid="delete-token-button-12"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="bx--visually-hidden"
                          id="danger-description-7"
                        >
                          danger
                        </span>
                        <svg
                          aria-hidden="true"
                          aria-label="deleteToken"
                          class="bx--btn__icon"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 32 32"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 12H14V24H12zM18 12H20V24H18z"
                          />
                          <path
                            d="M4 6V8H6V28a2 2 0 002 2H24a2 2 0 002-2V8h2V6zM8 28V8H24V28zM12 2H20V4H12z"
                          />
                        </svg>
                      </button>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="tableCell"
                    >
                      <p
                        class="tableTextarea"
                      >
                        Test User
                      </p>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="tableCell"
                    >
                      <p
                        class="tableTextarea"
                      >
                        test token
                      </p>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="tableCell"
                    >
                      <p
                        class="tableTextarea"
                      >
                        January 01, 2020
                      </p>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="tableCell"
                    >
                      <p
                        class="tableTextarea"
                      >
                        January 01, 2020
                      </p>
                    </div>
                  </td>
                  <td
                    style="padding: 0px;"
                  >
                    <div
                      class="tableCell"
                    >
                      <button
                        aria-describedby="danger-description-8"
                        class="button bx--btn bx--btn--sm bx--btn--danger--ghost"
                        data-testid="delete-token-button-11"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="bx--visually-hidden"
                          id="danger-description-8"
                        >
                          danger
                        </span>
                        <svg
                          aria-hidden="true"
                          aria-label="deleteToken"
                          class="bx--btn__icon"
                          fill="currentColor"
                          focusable="false"
                          height="16"
                          preserveAspectRatio="xMidYMid meet"
                          role="img"
                          viewBox="0 0 32 32"
                          width="16"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M12 12H14V24H12zM18 12H20V24H18z"
                          />
                          <path
                            d="M4 6V8H6V28a2 2 0 002 2H24a2 2 0 002-2V8h2V6zM8 28V8H24V28zM12 2H20V4H12z"
                          />
                        </svg>
                      </button>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="bx--pagination"
        >
          <div
            class="bx--pagination__left"
          >
            <label
              class="bx--pagination__text"
              for="bx-pagination-select-1"
              id="bx-pagination-select-1-count-label"
            >
              Items per page:
            </label>
            <div
              class="bx--form-item"
            >
              <div
                class="bx--select bx--select--inline bx--select__item-count"
              >
                <div
                  class="bx--select-input--inline__wrapper"
                >
                  <div
                    class="bx--select-input__wrapper"
                  >
                    <select
                      class="bx--select-input"
                      id="bx-pagination-select-1"
                    >
                      <option
                        class="bx--select-option"
                        value="10"
                      >
                        10
                      </option>
                      <option
                        class="bx--select-option"
                        value="20"
                      >
                        20
                      </option>
                      <option
                        class="bx--select-option"
                        value="50"
                      >
                        50
                      </option>
                      <option
                        class="bx--select-option"
                        value="100"
                      >
                        100
                      </option>
                    </select>
                    <svg
                      aria-hidden="true"
                      class="bx--select__arrow"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <span
              class="bx--pagination__text bx--pagination__items-count"
            >
              1–2 of 2 items
            </span>
          </div>
          <div
            class="bx--pagination__right"
          >
            <div
              class="bx--form-item"
            >
              <div
                class="bx--select bx--select--inline bx--select__page-number"
              >
                <label
                  class="bx--label bx--visually-hidden"
                  for="bx-pagination-select-1-right"
                >
                  Page number, of 1 pages
                </label>
                <div
                  class="bx--select-input--inline__wrapper"
                >
                  <div
                    class="bx--select-input__wrapper"
                  >
                    <select
                      class="bx--select-input"
                      id="bx-pagination-select-1-right"
                    >
                      <option
                        class="bx--select-option"
                        value="1"
                      >
                        1
                      </option>
                    </select>
                    <svg
                      aria-hidden="true"
                      class="bx--select__arrow"
                      fill="currentColor"
                      focusable="false"
                      height="16"
                      preserveAspectRatio="xMidYMid meet"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <span
              class="bx--pagination__text"
            >
              of 1 page
            </span>
            <div
              class="bx--pagination__control-buttons"
            >
              <button
                class="bx--pagination__button bx--pagination__button--backward bx--pagination__button--no-index bx--btn bx--btn--ghost bx--btn--disabled bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-center"
                disabled=""
                tabindex="0"
                type="button"
              >
                <div
                  class="bx--assistive-text"
                >
                  Previous page
                </div>
                <svg
                  aria-hidden="true"
                  aria-label="Previous page"
                  class="bx--btn__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M20 24L10 16 20 8z"
                  />
                </svg>
              </button>
              <button
                class="bx--pagination__button bx--pagination__button--forward bx--pagination__button--no-index bx--btn bx--btn--ghost bx--btn--disabled bx--tooltip--hidden bx--btn--icon-only bx--tooltip__trigger bx--tooltip--a11y bx--btn--icon-only--top bx--tooltip--align-end"
                disabled=""
                tabindex="0"
                type="button"
              >
                <div
                  class="bx--assistive-text"
                >
                  Next page
                </div>
                <svg
                  aria-hidden="true"
                  aria-label="Next page"
                  class="bx--btn__icon"
                  fill="currentColor"
                  focusable="false"
                  height="16"
                  preserveAspectRatio="xMidYMid meet"
                  role="img"
                  viewBox="0 0 32 32"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 8L22 16 12 24z"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="bx--bmrg-modal-portal"
  />
  <div
    class="bx--bmrg-modal-portal"
  />
  <div
    class="bx--bmrg-modal-portal"
  />
</body>
`;
